@@ -15,8 +15,7 @@ import java.util.Map;
 import java.util.Optional;
 import java.util.Set;
 import java.util.stream.Collectors;
-
-import javax.ws.rs.core.UriBuilder;
+import jakarta.ws.rs.core.UriBuilder;
 
 import com.bakdata.conquery.introspection.Introspection;
 import com.bakdata.conquery.io.cps.CPSType;
@@ -98,7 +97,7 @@ public class GroupHandler {
 		}
 		if (!endpoints.isEmpty()) {
 			out.heading("REST endpoints");
-			for (Pair<String, MethodInfo> endpoint : endpoints.stream().sorted(Comparator.comparing(Pair::getLeft)).collect(Collectors.toList())) {
+			for (Pair<String, MethodInfo> endpoint : endpoints.stream().sorted(Comparator.comparing(Pair::getLeft)).toList()) {
 				handleEndpoint(endpoint.getLeft(), endpoint.getRight());
 			}
 		}
@@ -108,20 +107,20 @@ public class GroupHandler {
 		}
 
 		out.subHeading("Other Types");
-		for (Class<?> t : group.getOtherClasses().stream().sorted(Comparator.comparing(Class::getSimpleName)).collect(Collectors.toList())) {
+		for (Class<?> t : group.getOtherClasses().stream().sorted(Comparator.comparing(Class::getSimpleName)).toList()) {
 			handleClass(typeTitle(t), scan.getClassInfo(t.getName()));
 		}
 
 		if (!group.getMarkerInterfaces().isEmpty()) {
 			out.subHeading("Marker Interfaces");
-			for (Class<?> t : group.getMarkerInterfaces().stream().sorted(Comparator.comparing(Class::getSimpleName)).collect(Collectors.toList())) {
+			for (Class<?> t : group.getMarkerInterfaces().stream().sorted(Comparator.comparing(Class::getSimpleName)).toList()) {
 				handleMarkerInterface(markerTitle(t), scan.getClassInfo(t.getName()));
 			}
 		}
 	}
 
 	private void handleEndpoint(String url, MethodInfo method) throws IOException {
-		Introspection introspec = Introspection.from(root, method.getClassInfo()).findMethod(method);
+		final Introspection introspec = Introspection.from(root, method.getClassInfo()).findMethod(method);
 
 		try (Closeable details = details(getRestMethod(method) + "\u2001" + url, method.getClassInfo(), introspec)) {
 			out.paragraph("Method: " + code(method.getName()));
@@ -135,8 +134,8 @@ public class GroupHandler {
 		}
 	}
 
-	private void collectEndpoints(Class<?> resource) throws IOException {
-		ClassInfo info = scan.getClassInfo(resource.getName());
+	private void collectEndpoints(Class<?> resource) {
+		final ClassInfo info = scan.getClassInfo(resource.getName());
 
 		for (MethodInfo method : info.getMethodInfo()) {
 			if (getRestMethod(method) == null) {
@@ -164,7 +163,7 @@ public class GroupHandler {
 	public void handleBase(Base base) throws IOException {
 		out.subHeading(baseTitle(base.getBaseClass()));
 		out.paragraph(base.getDescription());
-		String typeProperty = base.getBaseClass().getAnnotation(JsonTypeInfo.class).property();
+		final String typeProperty = base.getBaseClass().getAnnotation(JsonTypeInfo.class).property();
 
 		out.paragraph("Different types of "
 					  + base.getBaseClass().getSimpleName()
@@ -172,7 +171,7 @@ public class GroupHandler {
 					  + code(typeProperty)
 					  + " to one of the following values:");
 
-		for (Pair<CPSType, ClassInfo> pair : content.get(base).stream().sorted(Comparator.comparing(p -> p.getLeft().id())).collect(Collectors.toList())) {
+		for (Pair<CPSType, ClassInfo> pair : content.get(base).stream().sorted(Comparator.comparing(p -> p.getLeft().id())).toList()) {
 
 			handleClass(pair.getLeft(), pair.getRight());
 		}
@@ -192,13 +191,13 @@ public class GroupHandler {
 	}
 
 	private void handleClass(String name, ClassInfo c) throws IOException {
-		Introspection source = Introspection.from(root, c);
+		final Introspection source = Introspection.from(root, c);
 		try (Closeable details = details(name, c, source)) {
 			if (c.getFieldInfo().stream().anyMatch(this::isJSONSettableField)) {
 				out.line("Supported Fields:");
 
 				out.tableHeader("", "Field", "Type", "Default", "Example", "Description");
-				for (FieldInfo field : c.getFieldInfo().stream().sorted().collect(Collectors.toList())) {
+				for (FieldInfo field : c.getFieldInfo().stream().sorted().toList()) {
 					handleField(c, field);
 				}
 			}
@@ -226,18 +225,13 @@ public class GroupHandler {
 			);
 		}
 
-		return new Closeable() {
-			@Override
-			public void close() throws IOException {
-				out.line("</p></details>");
-			}
-		};
+		return () -> out.line("</p></details>");
 	}
 
 	private void handleMarkerInterface(String name, ClassInfo c) throws IOException {
-		Introspection source = Introspection.from(root, c);
+		final Introspection source = Introspection.from(root, c);
 		try (Closeable details = details(name, c, source)) {
-			Set<String> values = new HashSet<>();
+			final Set<String> values = new HashSet<>();
 			for (Class<?> cl : group.getOtherClasses()) {
 				if (c.loadClass().isAssignableFrom(cl)) {
 					values.add("[" + cl.getSimpleName() + "](" + anchor(typeTitle(cl)) + ")");
@@ -268,12 +262,12 @@ public class GroupHandler {
 			return;
 		}
 
-		Introspection introspec = Introspection.from(root, field.getClassInfo()).findField(field);
-		String name = field.getName();
-		TypeSignature typeSignature = field.getTypeSignatureOrTypeDescriptor();
-		Ctx ctx = new Ctx().withField(field);
+		final Introspection introspec = Introspection.from(root, field.getClassInfo()).findField(field);
+		final String name = field.getName();
+		final TypeSignature typeSignature = field.getTypeSignatureOrTypeDescriptor();
+		final Ctx ctx = new Ctx().withField(field);
 
-		String type;
+		final String type;
 		if (ID_REF.stream().anyMatch(field::hasAnnotation)) {
 			type = ID_OF + printType(ctx.withIdOf(true), typeSignature);
 		}
@@ -296,9 +290,9 @@ public class GroupHandler {
 
 	private String findDefault(ClassInfo currentType, FieldInfo field) {
 		try {
-			Object value = currentType.loadClass().getConstructor().newInstance();
-			JsonNode node = Jackson.MAPPER.valueToTree(value);
-			JsonNode def = node.get(field.getName());
+			final Object value = currentType.loadClass().getConstructor().newInstance();
+			final JsonNode node = Jackson.MAPPER.valueToTree(value);
+			final JsonNode def = node.get(field.getName());
 			if (def == null) {
 				return "\u2400";
 			}
@@ -312,7 +306,7 @@ public class GroupHandler {
 				return "";
 			}
 			//check if file path not not generate absolute paths
-			String localPath = Jackson.MAPPER.writeValueAsString(new File("."));
+			final String localPath = Jackson.MAPPER.writeValueAsString(new File("."));
 			json = StringUtils.replace(json, localPath.substring(1, localPath.length() - 2), "./");
 			return code(json);
 		}
@@ -322,8 +316,8 @@ public class GroupHandler {
 	}
 
 	private String editLink(Introspection intro) throws IOException {
-		Path target = root.toPath().relativize(intro.getFile().getCanonicalFile().toPath());
-		String line = intro.getLine();
+		final Path target = root.toPath().relativize(intro.getFile().getCanonicalFile().toPath());
+		final String line = intro.getLine();
 		return "[✎]("
 			   + "https://github.com/bakdata/conquery/edit/develop/"
 			   + FilenameUtils.separatorsToUnix(target.toString())
@@ -335,16 +329,17 @@ public class GroupHandler {
 		if (type instanceof ArrayTypeSignature) {
 			return LIST_OF + printType(ctx, ((ArrayTypeSignature) type).getElementTypeSignature());
 		}
+
 		if (type instanceof BaseTypeSignature) {
 			return code(type.toString());
 		}
-		if (type instanceof ClassRefTypeSignature) {
-			ClassRefTypeSignature classRef = (ClassRefTypeSignature) type;
-			Class<?> cl = classRef.loadClass();
+
+		if (type instanceof ClassRefTypeSignature classRef) {
+			final Class<?> cl = classRef.loadClass();
 
 			//ID
 			if (Id.class.isAssignableFrom(cl)) {
-				String name = cl.getSimpleName();
+				final String name = cl.getSimpleName();
 				return ID_OF + code(name.substring(0, name.length() - 2));
 			}
 
@@ -356,7 +351,7 @@ public class GroupHandler {
 
 			//List
 			if (List.class.isAssignableFrom(cl)) {
-				TypeArgument param = classRef.getTypeArguments().get(0);
+				final TypeArgument param = classRef.getTypeArguments().get(0);
 				return LIST_OF + printType(ctx.withGeneric(true), param);
 			}
 
@@ -390,7 +385,7 @@ public class GroupHandler {
 				return "[" + type.toStringWithSimpleNames() + "](" + anchor(baseTitle(cl)) + ")";
 			}
 			//another contentClass
-			Optional<Pair<CPSType, ClassInfo>>
+			final Optional<Pair<CPSType, ClassInfo>>
 					match =
 					content.values().stream().filter(p -> p.getRight().loadClass().equals(cl)).collect(MoreCollectors.toOptional());
 			if (match.isPresent()) {
@@ -447,8 +442,8 @@ public class GroupHandler {
 			return "UNKNWON";
 		}
 		if (type.getTypeSignature() instanceof TypeVariableSignature) {
-			String v = type.getTypeSignature().toString();
-			TypeParameter typeParam = ctx
+			final String v = type.getTypeSignature().toString();
+			final TypeParameter typeParam = ctx
 											  .getField()
 											  .getClassInfo()
 											  .getTypeSignature()
@@ -486,6 +481,7 @@ public class GroupHandler {
 			}
 		}
 
-		return false;
+		// is record
+		return field.getClassInfo().isRecord();
 	}
 }
