@@ -4,7 +4,6 @@ import java.time.LocalDate;
 import java.time.temporal.ChronoUnit;
 import java.time.temporal.IsoFields;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 import java.util.stream.Collectors;
@@ -18,24 +17,37 @@ import com.bakdata.conquery.models.common.Range;
 import com.fasterxml.jackson.annotation.JsonCreator;
 import com.fasterxml.jackson.annotation.JsonIgnore;
 import com.fasterxml.jackson.annotation.JsonValue;
-import lombok.EqualsAndHashCode;
+import lombok.With;
 
-@EqualsAndHashCode(onlyExplicitlyIncluded = true)
-public abstract class CDateRange implements IRange<LocalDate, CDateRange> {
+@With
+public final class CDateRange implements IRange<LocalDate, CDateRange> {
+
+	public static final int NEGATIVE_INFINITY = Integer.MIN_VALUE;
+	public static final int POSITIVE_INFINITY = Integer.MAX_VALUE;
+	private final int min;
+	private final int max;
+
+	private CDateRange(int min, int max) {
+		this.min = min;
+		this.max = max;
+
+		if (min > max) {
+			throw new IllegalArgumentException(
+					String.format("Min(%s) is not less than max(%s)", CDate.toLocalDate(min), CDate.toLocalDate(max)));
+		}
+	}
 
 	/**
 	 * Create a Range containing only the supplied date. The value needs to be a valid CDate.
 	 * @param value The value this range contains, as {@link CDate}.
-	 * @return
 	 */
 	public static CDateRange exactly(int value) {
-		return new CDateRangeExactly(value);
+		return of(value, value);
 	}
 
 	/**
-	 * Creates a new Range containing containing only the supplied date.
+	 * Creates a new Range containing only the supplied date.
 	 * @param value the value the resulting range will contain.
-	 * @return
 	 */
 	public static CDateRange exactly(LocalDate value) {
 		return exactly(CDate.ofLocalDate(value));
@@ -48,29 +60,13 @@ public abstract class CDateRange implements IRange<LocalDate, CDateRange> {
 	 */
 	public static CDateRange of(Range<LocalDate> value) {
 		return of(
-			CDate.ofLocalDate(value.getMin(), Integer.MIN_VALUE),
-			CDate.ofLocalDate(value.getMax(), Integer.MAX_VALUE)
+			CDate.ofLocalDate(value.getMin(), NEGATIVE_INFINITY),
+			CDate.ofLocalDate(value.getMax(), POSITIVE_INFINITY)
 		);
 	}
-	
+
 	public static CDateRange of(int min, int max) {
-		if(min == Integer.MIN_VALUE && max == Integer.MAX_VALUE){
-			return CDateRange.all();
-		}
-
-		if(max == Integer.MAX_VALUE){
-			return atLeast(min);
-		}
-
-		if(min == Integer.MIN_VALUE){
-			return atMost(max);
-		}
-
-		if(min == max){
-			return exactly(min);
-		}
-
-		return new CDateRangeClosed(min, max);
+		return new CDateRange(min, max);
 	}
 
 	/**
@@ -88,7 +84,7 @@ public abstract class CDateRange implements IRange<LocalDate, CDateRange> {
 	 * @return
 	 */
 	public static CDateRange atLeast(int value) {
-		return new CDateRangeStarting(value);
+		return of(value, POSITIVE_INFINITY);
 	}
 
 	/**
@@ -97,7 +93,7 @@ public abstract class CDateRange implements IRange<LocalDate, CDateRange> {
 	 * @return
 	 */
 	public static CDateRange atMost(int value) {
-		return new CDateRangeEnding(value);
+		return of(NEGATIVE_INFINITY, value);
 	}
 
 	/**
@@ -109,7 +105,6 @@ public abstract class CDateRange implements IRange<LocalDate, CDateRange> {
 		return atMost(CDate.ofLocalDate(value));
 	}
 
-
 	/**
 	 * Creates a new range containing all values between {@code min} and {@code max}.
 	 * @param min lower bound of the range
@@ -119,8 +114,8 @@ public abstract class CDateRange implements IRange<LocalDate, CDateRange> {
 	@JsonCreator
 	public static CDateRange of(LocalDate min, LocalDate max) {
 		return of(
-			CDate.ofLocalDate(min, Integer.MIN_VALUE),
-			CDate.ofLocalDate(max, Integer.MAX_VALUE)
+			CDate.ofLocalDate(min, NEGATIVE_INFINITY),
+			CDate.ofLocalDate(max, POSITIVE_INFINITY)
 		);
 	}
 
@@ -129,23 +124,7 @@ public abstract class CDateRange implements IRange<LocalDate, CDateRange> {
 	 * @return
 	 */
 	public static CDateRange all() {
-		return CDateRangeOpen.INSTANCE;
-	}
-
-	@Override
-	public LocalDate getMax() {
-		return getMaxValue() == Integer.MAX_VALUE ? null : CDate.toLocalDate(getMaxValue());
-	}
-
-	@EqualsAndHashCode.Include
-	public abstract int getMaxValue();
-
-	@EqualsAndHashCode.Include
-	public abstract int getMinValue();
-
-	@Override
-	public LocalDate getMin() {
-		return getMinValue() == Integer.MIN_VALUE ? null : CDate.toLocalDate(getMinValue());
+		return of(NEGATIVE_INFINITY, POSITIVE_INFINITY);
 	}
 
 	@JsonCreator
@@ -155,6 +134,44 @@ public abstract class CDateRange implements IRange<LocalDate, CDateRange> {
 		}
 
 		return of(values[0], values[1]);
+	}
+
+	public static CDateRange fromList(List<? extends Number> values) {
+		if (values.size() != 2) {
+			throw new IllegalArgumentException("Array must be exactly of size 2");
+		}
+
+		return of(values.get(0).intValue(), values.get(1).intValue());
+	}
+
+	public boolean contains(int rep) {
+		return rep >= getMinValue() && rep <= getMaxValue();
+	}
+
+	public int getMinValue() {
+		return min;
+	}
+
+	public int getMaxValue() {
+		return max;
+	}
+
+	@Override
+	public String toString() {
+		final String min = hasLowerBound() ? getMin().toString() : "-∞";
+		final String max = hasUpperBound() ? getMax().toString() : "∞";
+
+		return min + "/" + max;
+	}
+
+	@Override
+	public LocalDate getMax() {
+		return getMaxValue() == POSITIVE_INFINITY ? null : CDate.toLocalDate(getMaxValue());
+	}
+
+	@Override
+	public LocalDate getMin() {
+		return getMinValue() == NEGATIVE_INFINITY ? null : CDate.toLocalDate(getMinValue());
 	}
 
 	public CDateRange intersection(CDateRange other) {
@@ -170,7 +187,6 @@ public abstract class CDateRange implements IRange<LocalDate, CDateRange> {
 		return new int[] { getMinValue(), getMaxValue() };
 	}
 
-
 	@Override
 	public boolean contains(LocalDate value) {
 		return value != null && contains(CDate.ofLocalDate(value));
@@ -180,8 +196,6 @@ public abstract class CDateRange implements IRange<LocalDate, CDateRange> {
 	public boolean contains(CDateRange other) {
 		return other != null && contains(other.getMinValue()) && contains(other.getMaxValue());
 	}
-
-	public abstract boolean contains(int rep);
 
 	@Override
 	public CDateRange span(CDateRange other) {
@@ -209,10 +223,10 @@ public abstract class CDateRange implements IRange<LocalDate, CDateRange> {
 				min = getMaxValue();
 			}
 			else {
-				min = Integer.MAX_VALUE;
+				min = POSITIVE_INFINITY;
 			}
 
-			// then compare with others known min - if all fails, set it to Integer.MIN_VALUE
+			// then compare with others known min - if all fails, set it to MIN_VALUE
 			if (other.hasLowerBound()) {
 				min = Math.min(min, other.getMinValue());
 			}
@@ -220,8 +234,8 @@ public abstract class CDateRange implements IRange<LocalDate, CDateRange> {
 				min = Math.min(min, other.getMaxValue());
 			}
 
-			if (min == Integer.MAX_VALUE) {
-				min = Integer.MIN_VALUE;
+			if (min == POSITIVE_INFINITY) {
+				min = NEGATIVE_INFINITY;
 			}
 		}
 
@@ -234,7 +248,7 @@ public abstract class CDateRange implements IRange<LocalDate, CDateRange> {
 				max = getMinValue();
 			}
 			else {
-				max = Integer.MIN_VALUE;
+				max = NEGATIVE_INFINITY;
 			}
 
 			if(other.hasUpperBound()){
@@ -244,42 +258,41 @@ public abstract class CDateRange implements IRange<LocalDate, CDateRange> {
 				max = Math.max(max, other.getMinValue());
 			}
 
-			if (max == Integer.MIN_VALUE) {
-				max = Integer.MAX_VALUE;
+			if (max == NEGATIVE_INFINITY) {
+				max = POSITIVE_INFINITY;
 			}
 		}
 
 
-		if(min == Integer.MIN_VALUE && max != Integer.MAX_VALUE){
+		if(min == NEGATIVE_INFINITY && max != POSITIVE_INFINITY){
 			min = max;
 		}
 
-		if(max == Integer.MAX_VALUE && min != Integer.MIN_VALUE){
+		if(max == POSITIVE_INFINITY && min != NEGATIVE_INFINITY){
 			max = min;
 		}
 
 		return of(min, max);
 	}
 
-
 	@Override
 	public boolean isOpen() {
-		return getMinValue() == Integer.MIN_VALUE || getMaxValue() == Integer.MAX_VALUE;
+		return getMinValue() == NEGATIVE_INFINITY || getMaxValue() == POSITIVE_INFINITY;
 	}
 
 	@Override
 	public boolean isAll() {
-		return getMinValue() == Integer.MIN_VALUE && getMaxValue() == Integer.MAX_VALUE;
+		return getMinValue() == NEGATIVE_INFINITY && getMaxValue() == POSITIVE_INFINITY;
 	}
 
 	@Override
 	public boolean isAtMost() {
-		return getMinValue() == Integer.MIN_VALUE && getMaxValue() != Integer.MAX_VALUE;
+		return getMinValue() == NEGATIVE_INFINITY && getMaxValue() != POSITIVE_INFINITY;
 	}
 
 	@Override
 	public boolean isAtLeast() {
-		return getMinValue() != Integer.MIN_VALUE && getMaxValue() == Integer.MAX_VALUE;
+		return getMinValue() != NEGATIVE_INFINITY && getMaxValue() == POSITIVE_INFINITY;
 	}
 
 	@Override
@@ -309,12 +322,11 @@ public abstract class CDateRange implements IRange<LocalDate, CDateRange> {
 		}
 
 		return !(
-			this.getMinValue() > other.getMaxValue()
+			getMinValue() > other.getMaxValue()
 			||
-			this.getMaxValue() < other.getMinValue()
+			getMaxValue() < other.getMinValue()
 		);
 	}
-
 
 	public boolean encloses(CDateRange other) {
 		if (other == null) {
@@ -331,7 +343,7 @@ public abstract class CDateRange implements IRange<LocalDate, CDateRange> {
 	 * @return {@code true} if the Range has an upper bound
 	 */
 	public boolean hasUpperBound() {
-		return getMaxValue() != Integer.MAX_VALUE;
+		return getMaxValue() != POSITIVE_INFINITY;
 	}
 
 	/**
@@ -339,7 +351,7 @@ public abstract class CDateRange implements IRange<LocalDate, CDateRange> {
 	 * @return {@code true} if the Range has a lower bound
 	 */
 	public boolean hasLowerBound() {
-		return getMinValue() != Integer.MIN_VALUE;
+		return getMinValue() != NEGATIVE_INFINITY;
 	}
 
 	/**
@@ -349,13 +361,6 @@ public abstract class CDateRange implements IRange<LocalDate, CDateRange> {
 	public Range<LocalDate> toSimpleRange() {
 		return new Range<>(getMin(), getMax());
 	}
-	
-	/**
-	 * The String representation of a DateRange follows the ISO definition.
-	 * For open ended ranges a positive or negative ∞ is used. 
-	 */
-	@Override
-	public abstract String toString();
 
 	/**
 	 * Returns the years that are part of this date range.
@@ -368,28 +373,28 @@ public abstract class CDateRange implements IRange<LocalDate, CDateRange> {
 			return Collections.emptyList();
 		}
 
-		int startYear = this.getMin().getYear();
-		int endYear = this.getMax().getYear();
+		final int startYear = getMin().getYear();
+		final int endYear = getMax().getYear();
 
 		if(startYear == endYear) {
-			return Arrays.asList(this);
+			return List.of(this);
 		}
 		// Range covers multiple years
-		List<CDateRange> ranges = new ArrayList<>();
-		
+		final List<CDateRange> ranges = new ArrayList<>();
+
 		// First year begins with this range
-		ranges.add(CDateRange.of(this.getMin(), LocalDate.of(startYear, 12, 31)));
-		
+		ranges.add(CDateRange.of(getMin(), LocalDate.of(startYear, 12, 31)));
+
 		// Years in between
 		if(endYear-startYear > 1) {
 			ranges.addAll(IntStream
 				.rangeClosed(startYear+1, endYear-1)
-				// Create date range with first days of year and the last day 
+				// Create date range with first days of year and the last day
 				.mapToObj(year -> CDateRange.of(LocalDate.ofYearDay(year, 1), LocalDate.of(year, 12, 31)))
 				.collect(Collectors.toList()));
 		}
 		// Last year end with this range
-		ranges.add(CDateRange.of(LocalDate.of(endYear, 1, 1), this.getMax()));
+		ranges.add(CDateRange.of(LocalDate.of(endYear, 1, 1), getMax()));
 		return ranges;
 	}
 
@@ -406,31 +411,31 @@ public abstract class CDateRange implements IRange<LocalDate, CDateRange> {
 		}
 
 		// If dateRange is shorter than a quarter, only add that first quarter.
-		if(QuarterUtils.getFirstDayOfQuarter(getMin()).isEqual( QuarterUtils.getFirstDayOfQuarter(getMax()))){
+		if(QuarterUtils.getFirstDayOfQuarter(getMin()).isEqual(QuarterUtils.getFirstDayOfQuarter(getMax()))){
 			return List.of(this);
 		}
-		List<CDateRange> ranges = new ArrayList<>();
+		final List<CDateRange> ranges = new ArrayList<>();
 
 		// First quarter begins with this range
-		CDateRange start = CDateRange.of(getMin(), QuarterUtils.getLastDayOfQuarter(getMin()));
-		CDateRange end = CDateRange.of(QuarterUtils.getFirstDayOfQuarter(getMax()), getMax());
+		final CDateRange start = CDateRange.of(getMin(), QuarterUtils.getLastDayOfQuarter(getMin()));
+		final CDateRange end = CDateRange.of(QuarterUtils.getFirstDayOfQuarter(getMax()), getMax());
 
 		ranges.add(start);
 
-		LocalDate nextQuarterDate = this.getMin().plus(1, IsoFields.QUARTER_YEARS);
+		LocalDate nextQuarterDate = getMin().plus(1, IsoFields.QUARTER_YEARS);
 		while(nextQuarterDate.isBefore(end.getMin())) {
 			ranges.add(QuarterUtils.fromDate(nextQuarterDate));
 			nextQuarterDate = nextQuarterDate.plus(1, IsoFields.QUARTER_YEARS);
 		}
-		// Don't add the end if its the same quarter as start
+		// Don't add the end if it's the same quarter as start
 		if(!start.equals(end)) {
-			// Last year end with this range
+			// Last year ends with this range
 			ranges.add(end);
 		}
 
 		return ranges;
 	}
-	
+
 	/**
 	 * Returns the days that are part of this date range as ranges.
 	 *
@@ -439,12 +444,11 @@ public abstract class CDateRange implements IRange<LocalDate, CDateRange> {
 	 */
 	public List<CDateRange> getCoveredDays() {
 		if(isOpen()){
-			// TODO: 22.04.2020 throw exception?
 			return Collections.emptyList();
 		}
 
-		List<CDateRange> ranges = new ArrayList<>();
-		for(int i = this.getMinValue(); i <= this.getMaxValue(); i++) {
+		final List<CDateRange> ranges = new ArrayList<>();
+		for(int i = getMinValue(); i <= getMaxValue(); i++) {
 			ranges.add(CDateRange.exactly(i));
 		}
 		return ranges;
@@ -456,7 +460,28 @@ public abstract class CDateRange implements IRange<LocalDate, CDateRange> {
 		}
 
 
-		int quarterStart = CDate.ofLocalDate(QuarterUtils.getFirstDayOfQuarter(getMinValue()));
+		final int quarterStart = CDate.ofLocalDate(QuarterUtils.getFirstDayOfQuarter(getMinValue()));
 		return getMinValue() == quarterStart && getMaxValue() == CQuarter.getLastDay(quarterStart);
+	}
+
+	public boolean equals(Object o) {
+		if (o == this) {
+			return true;
+		}
+
+		if (!(o instanceof CDateRange other)) {
+			return false;
+		}
+
+		return getMaxValue() == other.getMaxValue() && getMinValue() == other.getMinValue();
+	}
+
+	public int hashCode() {
+
+		final int PRIME = 59;
+		int result = 1;
+		result = result * PRIME + getMaxValue();
+		result = result * PRIME + getMinValue();
+		return result;
 	}
 }
